--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "gulp start",
         "dev": "gulp dev",
-        "build": "gulp build",
+        "build": "gulp build && echo 'em-kolba.su' > build/CNAME",
         "deploy": "gh-pages -d build"
     },
     "keywords": [],
